# typst-desktop

./: .gitignore  LICENSE  README.md  RELEASE.md  package.json  vite.config.js
.gitea/workflows/: build.yml  ci.yml
.github/workflows/: ci.yml  release.yml
packaging/arch/: PKGBUILD  typst-desktop.desktop
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  compiler.rs  db.rs  lib.rs  lsp.rs  sync.rs  thumbnails.rs  workspace.rs  world.rs  ws.rs
src/lib/components/: AssetsModal.svelte  ConfirmModal.svelte  ConflictModal.svelte  Editor.svelte  EditorToolbar.svelte  FileTree.svelte  FileViewer.svelte  ImageViewer.svelte  InfoModal.svelte  LoginModal.svelte  Modal.svelte  PageSettingsModal.svelte  Preview.svelte  PromptModal.svelte  SettingsModal.svelte  WindowControls.svelte
src/lib/ts/: api.ts  completions.ts  editor-actions.ts  editor-theme.ts  hotkeys.ts  import.ts  lsp.ts  menu-position.ts  state.svelte.ts  yjs-client.ts
src/routes/: +layout.svelte  +page.svelte
