[package]
name = "typst-desktop"
version = "1.0.0"
description = "A Tauri App"
authors = ["SirBlobby"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typst_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

typst = { version = "0.15.1", path = "../../typstdrive/typst/crates/typst" }
typst-kit = { path = "../../typstdrive/typst/crates/typst-kit", features = ["system-downloader", "system-packages", "embedded-fonts"] }
typst-pdf = { path = "../../typstdrive/typst/crates/typst-pdf" }
typst-render = { path = "../../typstdrive/typst/crates/typst-render" }
typst-svg = { path = "../../typstdrive/typst/crates/typst-svg" }
typst-html = { path = "../../typstdrive/typst/crates/typst-html" }
typst-layout = { path = "../../typstdrive/typst/crates/typst-layout" }
typst-assets = { version = "0.15.1", features = ["fonts"] }

chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
diffy = "0.4"
walkdir = "2"
ureq = { version = "2.12", features = ["json"] }

